tests/snapshots/run_wpt_conformance__litert_max_int32_4D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "max.https.any.js",
    "max int32 4D tensors",
    "litert",
    "PASS",
)
