tests/snapshots/run_wpt_conformance__litert_min_float16_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 57
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "min.https.any.js",
    "min float16 1D constant tensors",
    "litert",
    "PASS",
)
